feat: users table

--- a/spring_security/src/main/resources/application.properties
+++ b/spring_security/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=spring_security
 
-spring.security.user.name=aimable01
-spring.security.user.password=aimable@123
+#spring.security.user.name=aimable01
+#spring.security.user.password=aimable@123
 
 # database connection credentials
 spring.datasource.url=jdbc:postgresql://localhost:5432/spring
