--- a/spring_security/src/main/resources/application.properties
+++ b/spring_security/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.application.name=spring_security
 
-#spring.security.user.name=aimable01
-#spring.security.user.password=aimable@123
-
 # database connection credentials
 spring.datasource.url=jdbc:postgresql://localhost:5432/spring
 spring.datasource.username=postgres
 spring.datasource.password=2006
+
+# enable automatic table creation and adjustments
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
