--- a/spring_security/pom.xml
+++ b/spring_security/pom.xml
@@ -91,6 +91,19 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-gson</artifactId>
+			<version>0.12.6</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-orgjson</artifactId>
+			<version>0.12.6</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
