feat: pizza app properties

--- a/spring_boot_ultimate/src/main/resources/application.properties
+++ b/spring_boot_ultimate/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.application.name=demo
 
 # change server port
 server.port=8181
+
+# pizza app properties
+pizza.sauce=bbq
+pizza.topping=chicken
+pizza.crust=thin
