--- a/spring_boot_ultimate/database/src/main/resources/application.properties
+++ b/spring_boot_ultimate/database/src/main/resources/application.properties
@@ -1,7 +1,13 @@
 spring.application.name=database
 
 # in memory database
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
+# spring.datasource.url=jdbc:h2:mem:testdb
+# spring.datasource.driver-class-name=org.h2.Driver
+# spring.datasource.username=sa
+# spring.datasource.password=password
+
+# postgres database
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=2006
+spring.datasource.driver-class-name=org.postgresql.Driver
