--- a/spring_boot_ultimate/database/src/main/resources/application.properties
+++ b/spring_boot_ultimate/database/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=2006
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.sql.init.mode=always
