--- a/spring_boot_ultimate/database/src/main/resources/application.properties
+++ b/spring_boot_ultimate/database/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.datasource.password=2006
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.sql.init.mode=always
+
+# generate entities
+spring.jpa.hibernate.ddl-auto=update
