--- a/spring_boot_ultimate/library-app/src/main/resources/application.properties
+++ b/spring_boot_ultimate/library-app/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=library-app
+
+# postgres database
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=changeme
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.sql.init.mode=always
+
+# generate entities
+spring.jpa.hibernate.ddl-auto=update
