--- a/spring_boot_ultimate/library-app/docker-compose.yml
+++ b/spring_boot_ultimate/library-app/docker-compose.yml
@@ -7,4 +7,4 @@ services:
       - "5432:5432"
     restart: always
     environment:
-      POSTGRES_PASSWORD: changeme
+      POSTGRES_PASSWORD: 2006
