--- a/spring_boot_ultimate/library-app/src/main/resources/application.properties
+++ b/spring_boot_ultimate/library-app/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=library-app
 # postgres database
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=changeme
+spring.datasource.password=2006
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.sql.init.mode=always
