--- a/spring security/pom.xml
+++ b/spring security/pom.xml
@@ -8,10 +8,16 @@
     <artifactId>spring-security</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <packaging>pom</packaging>
+
     <properties>
         <maven.compiler.source>22</maven.compiler.source>
         <maven.compiler.target>22</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <modules>
+        <module>spring-security-client</module>
+    </modules>
 
 </project>
