--- a/spring security/spring-security-client/src/main/resources/application.properties
+++ b/spring security/spring-security-client/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=spring-security
+server.port = 8080
+
+# postgres database config
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=2006
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# other db config
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
