feat: change username and password

--- a/springSecEx/src/main/resources/application.properties
+++ b/springSecEx/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=springSecEx
+
+# change the username and password
+spring.security.user.name=aimable
+spring.security.user.password=aimable@123
