--- a/springSecEx/src/main/resources/application.properties
+++ b/springSecEx/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.application.name=springSecEx
 # change the username and password
 spring.security.user.name=aimable
 spring.security.user.password=aimable@123
+
+# database connection
+spring.datasource.url=jdbc:postgresql://localhost:5432/springsecex
+spring.datasource.username=postgres
+spring.datasource.password=2006
