--- a/springSecEx/src/main/resources/application.properties
+++ b/springSecEx/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.security.user.password=aimable@123
 spring.datasource.url=jdbc:postgresql://localhost:5432/springsecex
 spring.datasource.username=postgres
 spring.datasource.password=2006
+
+# the oauth config
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
